<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello world!</string>
    <string name="ButtonText">I \'m a Button</string>
    <string name="LoginText">Login</string>
    <string name="LoginHint">Login Name</string>
    <string name="Password">Password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch">What does this do?</string>
    <string name="dialog_message">Do you want to finish activity</string>
    <string name="dialog_title">Title</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="StartChat">Start Chat</string>
    <string name="sendButton">Send</string>
    <string name="WeatherForecast">Forecast</string>
    <string name="messageHint">Message Here</string>
    <string name="idHint">ID=</string>
    <string name="deleteBtn">Delete this message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="add">Add</string>
</resources>
