<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/MessageTxtHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/messageHint"
        android:layout_margin="15dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/txtID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idHint"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:layout_below="@id/MessageTxtHere"/>

    <Button
        android:id="@+id/Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/deleteBtn"
        android:layout_margin="15dp"
        />

</RelativeLayout>